alignment issues

--- a/src/featured.css
+++ b/src/featured.css
@@ -234,10 +234,32 @@ display: none; /* Chrome, Safari, Opera */
 .proj-section h4{
   font-size: 24px;
 }
+
+
+
+
+}
+.leftProj{
+  width: 90%;
+  padding:20px;
+  height: 250px;
+
+}
+.rightProj{
+  width:95%;
+  padding: 0;
+}
+
 .rightProj img{
   width: 100%;
+  margin: 10px;
+}
+.proj-section{
+  padding:0;
+  align-items: center;
+  height: auto;
+  width: 85%;
 }
 .proj-section h3{
-  font-size: 30px;
-}
+  font-size: 28px;
 }
